Integration of statistical tagger